Possible alternative to implementing collections
This change means there's two different alternatives for collect, one
that is a subscriber, and one returns a new publisher that emits the
accumulated element.